k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: accounting-app
  labels:
    name: accounting-app
    app: ponmo-accounting
